# jinja-ui-kit

./: .gitignore  LICENSE.txt  README.md  package.json  pyproject.toml  tailwind.config.js
jinja_ui_kit/: __init__.py
jinja_ui_kit/templates/components/accordion/: macro.html
jinja_ui_kit/templates/components/button/: macro.html
jinja_ui_kit/templates/components/checkbox/: macro.html
jinja_ui_kit/templates/components/error-message/: macro.html
jinja_ui_kit/templates/components/hint/: macro.html
jinja_ui_kit/templates/components/input/: macro.html
jinja_ui_kit/templates/components/label/: macro.html
jinja_ui_kit/templates/components/table/: macro.html
jinja_ui_kit/templates/components/textarea/: macro.html
jinja_ui_kit/templates/macros/: attributes.html
src/jinja_ui_kit/: __init__.py  assets.py
src/jinja_ui_kit/templates/components/accordion/: macro.html
src/jinja_ui_kit/templates/components/button/: macro.html
src/jinja_ui_kit/templates/components/checkbox/: macro.html
src/jinja_ui_kit/templates/components/checkboxes/: macro.html
src/jinja_ui_kit/templates/components/error-message/: macro.html
src/jinja_ui_kit/templates/components/error-summary/: macro.html
src/jinja_ui_kit/templates/components/fieldset/: macro.html
src/jinja_ui_kit/templates/components/file-upload/: macro.html
src/jinja_ui_kit/templates/components/hint/: macro.html
src/jinja_ui_kit/templates/components/input/: macro.html
src/jinja_ui_kit/templates/components/label/: macro.html
src/jinja_ui_kit/templates/components/modal/: macro.html
src/styles/: input.css
(+3 files in other folders)
