[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jinja-ui-kit"
version = "0.1.0"
description = "A collection of reusable Jinja2 macros for building web application UIs with Tailwind CSS styling"
dependencies = [
    "Jinja2>=3.0"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/byzantime/jinja-ui-kit"

[tool.setuptools.package-data]
jinja_ui_kit = ["templates/**/*.html"]