[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jinja-ui-kit"
version = "0.1.0"
description = "A collection of reusable Jinja2 macros for building web application UIs with Tailwind CSS styling"
dependencies = [
    "Jinja2>=3.0"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/byzantime/jinja-ui-kit"
